Fixed extra CSS spacing under Admin navbar when logged in.

--- a/sites/all/themes/coastal/css/design.css
+++ b/sites/all/themes/coastal/css/design.css
@@ -1583,3 +1583,13 @@ a.feed-icon {
 .leaflet-control-attribution {
   display: none;
 }
+
+body.html.logged-in.navbar-administration.navbar-tray-open.navbar-fixed.navbar-vertical,
+body.html.logged-in.navbar-administration.navbar-fixed.navbar-vertical,
+body.html.logged-in.navbar-administration.navbar-fixed.navbar-horizontal {
+  padding-top: 39px !important;
+}
+
+body.html.logged-in.navbar-administration.navbar-tray-open.navbar-fixed.navbar-horizontal {
+  padding-top: 79px !important;
+}
